async-coap-uri/proc-macros/tests/ui/assert_uri_literal/malformed_structure_2.stderr
error: unrecognized uri structure
 --> $DIR/malformed_structure_2.rs:7:25
  |
7 |     assert_uri_literal!("a/b/c");
  |                         ^^^^^^^
  |
  = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)
